# 3DEngines-MiniEngine

./: CMakeLists.txt  LICENSE  README.md  valgrind_suppressions.txt
inc/glad/: glad.h
inc/glm/detail/: type_mat4x4.inl  type_quat.inl  type_vec2.inl  type_vec3.inl  type_vec4.inl
inc/nlohmann/: json.hxx
res/Models/Creeper/: creeper.mtl
res/Models/MinecraftScene/: Mineways2Skfb.mtl
res/Models/Skybox/: skybox.mtl
res/Models/Sphere/: sphere.mtl
res/Scenes/: scene1.json  scene2.json  test1.json  test2.json
res/Shaders/: FragmentNormal.frag  FragmentNormal.vert  Texture.frag  Texture.vert  TextureAndLighting.frag  TextureAndLighting.vert
src/: Main.cpp  glad.c
src/Components/: Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  Component.cpp  Component.hpp  ComponentType.hpp  MeshRenderer.cpp  MeshRenderer.hpp  SkyboxFollowCamera.cpp  SkyboxFollowCamera.hpp  TestMovement.cpp  TestMovement.hpp  TestRotation.cpp  TestRotation.hpp
src/Constants/: ComponentConstants.hpp  EpsilonConstant.hpp  GraphicsConstants.hpp  InputConstants.hpp  JSONConstants.hpp  MathConstants.hpp  SerialisationConstants.hpp  ShaderConstants.hpp  UtilsConstants.hpp
src/Graphics/: Material.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  ShaderType.hpp  SubMesh.cpp  SubMesh.hpp  Texture.cpp  Texture.hpp
src/Graphics/API/: GraphicsAPISingleton.cpp  GraphicsAPISingleton.hpp  GraphicsTypes.hpp  IGraphicsAPI.hpp  OpenGLAPI.cpp  OpenGLAPI.hpp
src/Graphics/Shaders/: FragmentNormalShader.cpp  FragmentNormalShader.hpp  TextureAndLightingShader.cpp  (+3 more)
src/Math/: Frustum.cpp  Frustum.hpp  Math.hxx  Math.ixx  Matrix4x4.hpp  Plane.cpp  Plane.hpp  Quaternion.hpp  Sphere.cpp  Sphere.hpp  TMatrix4x4.hxx  TMatrix4x4.ixx  TNumericalConcept.hxx  TQuaternion.hxx  TQuaternion.ixx  TVector2.hxx  TVector2.ixx  TVector3.hxx  TVector3.ixx  TVector4.hxx  TVector4.ixx  Vector2.hpp  Vector2Int.hpp  Vector3.hpp  Vector3Int.hpp  Vector4.hpp
src/Scene/: IJsonSerializeable.hpp  ILateBindable.hpp  Scene.cpp  Scene.hpp
src/Scripting/: GameObject.cpp  GameObject.hpp  Transform.cpp  Transform.hpp
src/Serialisation/: IDeserialiser.hpp  ISerialisable.hpp  ISerialiser.hpp  JSONDeserialiser.cpp  JSONDeserialiser.hpp  JSONSerialiser.cpp  JSONSerialiser.hpp
src/Utils/: CatchAndRethrowExceptions.hpp  ExceptionWithStacktrace.cpp  ExceptionWithStacktrace.hpp  FileName.hpp  FileNameRelativeToProject.hpp  NullPointerException.hpp  PrintGLErrors.cpp  PrintGLErrors.hpp  ProjDirOperations.cpp  ProjDirOperations.hpp  StringMacros.hpp  TUID.hpp  Traces.hpp  TryCathRethrowStacktrace.hpp  UIDGenerator.cpp  UIDGenerator.hpp
src/Window/: Input.cpp  Input.hpp  Key.hpp  MouseButton.hpp  Window.cpp  Window.hpp
